--- a/index.html
+++ b/index.html
@@ -1,133 +1,299 @@
-<!-- En <head> asegúrate de tener la importación de Poppins -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-<style>
-:root {
-  --orange: #ff6b35;
-  --primary: #667eea;
-  --accent: #f093fb;
-  --success: #45dfa5;
-  --danger: #f5576c;
-  --skin: #f9fafc;
-  --background: linear-gradient(135deg, #667eea 0%, #f093fb 100%);
-}
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Evolución Biomédica</title>
+  <!-- Fuente Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    :root {
+      --orange: #ff6b35;
+      --primary: #667eea;
+      --accent: #f093fb;
+      --success: #45dfa5;
+      --danger: #f5576c;
+      --skin: #f9fafc;
+      --background: linear-gradient(135deg, #667eea 0%, #f093fb 100%);
+    }
 
-body {
-  font-family: 'Poppins', sans-serif;
-  background: var(--skin);
-  margin: 0;
-  min-height: 100vh;
-  background-image: var(--background);
-}
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--skin);
+      margin: 0;
+      min-height: 100vh;
+      background-image: var(--background);
+    }
 
-.container {
-  max-width: 1250px;
-  margin: 40px auto 0 auto;
-  background: #fff;
-  border-radius: 30px;
-  box-shadow: 0 20px 48px rgba(120,30,120,0.07), 0 4px 16px rgba(60,60,150,0.05);
-  overflow: hidden;
-  padding-bottom: 30px;
-  animation: fadeIn 1.2s;
-}
+    .container {
+      max-width: 1250px;
+      margin: 40px auto 0 auto;
+      background: #fff;
+      border-radius: 30px;
+      box-shadow: 0 20px 48px rgba(120,30,120,0.07), 0 4px 16px rgba(60,60,150,0.05);
+      overflow: hidden;
+      padding-bottom: 30px;
+      animation: fadeIn 1.2s;
+    }
 
-@keyframes fadeIn { from { opacity:0; transform: translateY(40px); } to { opacity:1; transform:none; } }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(40px); }
+      to { opacity: 1; transform: none; }
+    }
 
-.header {
-  background: linear-gradient(90deg, var(--orange), var(--primary) 80%);
-  color: white;
-  padding: 50px 25px 30px 25px;
-  text-align: center;
-}
+    .header {
+      background: linear-gradient(90deg, var(--orange), var(--primary) 80%);
+      color: white;
+      padding: 50px 25px 30px 25px;
+      text-align: center;
+    }
 
-.header h1 {
-  font-size: 2.5em;
-  font-weight: 700;
-  margin-bottom: 8px;
-  letter-spacing: -2px;
-}
+    .header h1 {
+      font-size: 2.5em;
+      font-weight: 700;
+      margin-bottom: 8px;
+      letter-spacing: -2px;
+    }
 
-.header p {
-  font-size: 1.2em;
-  margin: 0;
-  opacity: 0.92;
-}
+    .header p {
+      font-size: 1.2em;
+      margin: 0;
+      opacity: 0.92;
+    }
 
-.selector {
-  margin-top: -25px;
-  text-align: right;
-  padding: 0 35px 10px 0;
-}
+    .selector {
+      margin-top: -25px;
+      text-align: right;
+      padding: 0 35px 10px 0;
+    }
 
-.selector label {
-  font-weight: 600;
-  margin-right: 10px;
-  color: var(--primary);
-  letter-spacing: 1px;
-}
-.selector select {
-  font-family: 'Poppins', sans-serif;
-  font-size: 1em;
-  border-radius: 8px;
-  padding: 8px 15px;
-  border: 2px solid #e1e7ef;
-  background: #f5f7fa;
-  color: #333;
-  box-shadow: 0 1px 4px #ccc4;
-  transition: border .2s;
-}
-.selector select:focus { border-color: var(--orange); outline: none; }
+    .selector label {
+      font-weight: 600;
+      margin-right: 10px;
+      color: var(--primary);
+      letter-spacing: 1px;
+    }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-  gap: 36px;
-  padding: 40px 40px 15px 40px;
-}
+    .selector select {
+      font-family: 'Poppins', sans-serif;
+      font-size: 1em;
+      border-radius: 8px;
+      padding: 8px 15px;
+      border: 2px solid #e1e7ef;
+      background: #f5f7fa;
+      color: #333;
+      box-shadow: 0 1px 4px #ccc4;
+      transition: border .2s;
+    }
 
-.card {
-  background: linear-gradient(140deg, #f8faff 70%, #ffeedd 100%);
-  border-radius: 20px;
-  box-shadow: 0 6px 32px 0 #ccdaee1a, 0 1.5px 7px #ffc4cf33;
-  padding: 20px 15px 10px 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 3px solid transparent;
-  transition: border 0.13s;
-}
+    .selector select:focus {
+      border-color: var(--orange);
+      outline: none;
+    }
 
-.card:hover {
-  border: 3px solid var(--accent);
-  box-shadow: 0 12px 44px 0 #aaa4;
-  background: linear-gradient(120deg, #e7f7e8 50%, #f8e6fa 140%);
-}
-.card h3 {
-  font-size: 1.18em;
-  color: var(--orange);
-  margin-bottom: 20px;
-  font-weight: 700;
-  text-shadow: 1px 2px 0 #fff8;
-  letter-spacing: .5px;
-}
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+      gap: 36px;
+      padding: 40px 40px 15px 40px;
+    }
 
-.chart-container {
-  width: 100%;
-  min-height: 225px;
-}
+    .card {
+      background: linear-gradient(140deg, #f8faff 70%, #ffeedd 100%);
+      border-radius: 20px;
+      box-shadow: 0 6px 32px 0 #ccdaee1a, 0 1.5px 7px #ffc4cf33;
+      padding: 20px 15px 10px 15px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border: 3px solid transparent;
+      transition: border 0.13s;
+    }
 
-@media (max-width: 900px) {
-  .container { max-width: 100vw; margin: 10px 0 0 0; border-radius: 0; }
-  .grid { padding: 20px 4vw 20px 4vw; gap: 26px; }
-}
+    .card:hover {
+      border: 3px solid var(--accent);
+      box-shadow: 0 12px 44px 0 #aaa4;
+      background: linear-gradient(120deg, #e7f7e8 50%, #f8e6fa 140%);
+    }
 
-@media (max-width: 600px) {
-  .header { padding: 30px 6vw 20px 6vw;}
-  .header h1 { font-size: 1.4em; }
-  .grid { display: block; padding: 10px 2vw;}
-  .card { margin-bottom: 26px; }
-}
+    .card h3 {
+      font-size: 1.18em;
+      color: var(--orange);
+      margin-bottom: 20px;
+      font-weight: 700;
+      text-shadow: 1px 2px 0 #fff8;
+      letter-spacing: .5px;
+    }
 
-::-webkit-scrollbar { width: 5px; background: #eef0fa; border-radius: 5px;}
-::-webkit-scrollbar-thumb { background: #ffeedd; border-radius: 5px;}
+    .chart-container {
+      width: 100%;
+      min-height: 225px;
+    }
 
-</style>
+    @media (max-width: 900px) {
+      .container {
+        max-width: 100vw;
+        margin: 10px 0 0 0;
+        border-radius: 0;
+      }
+      .grid {
+        padding: 20px 4vw 20px 4vw;
+        gap: 26px;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .header {
+        padding: 30px 6vw 20px 6vw;
+      }
+      .header h1 {
+        font-size: 1.4em;
+      }
+      .grid {
+        display: block;
+        padding: 10px 2vw;
+      }
+      .card {
+        margin-bottom: 26px;
+      }
+    }
+
+    /* Custom scrollbar */
+    ::-webkit-scrollbar {
+      width: 5px;
+      background: #eef0fa;
+      border-radius: 5px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #ffeedd;
+      border-radius: 5px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1>📊 Evolución Biomédica</h1>
+      <p>Seguimiento Dinámico de Parámetros de Salud</p>
+    </div>
+    <div class="selector">
+      <label for="clienteSelect">Selecciona cliente:</label>
+      <select id="clienteSelect">
+        <option>—Cargando—</option>
+      </select>
+    </div>
+    <div class="grid">
+      <div class="card">
+        <h3>Peso (Kg)</h3>
+        <div class="chart-container"><canvas id="pesoChart"></canvas></div>
+      </div>
+      <div class="card">
+        <h3>BMI</h3>
+        <div class="chart-container"><canvas id="bmiChart"></canvas></div>
+      </div>
+      <div class="card">
+        <h3>% Grasa corporal</h3>
+        <div class="chart-container"><canvas id="grasaChart"></canvas></div>
+      </div>
+      <div class="card">
+        <h3>% Agua total</h3>
+        <div class="chart-container"><canvas id="aguaChart"></canvas></div>
+      </div>
+      <div class="card">
+        <h3>Masa muscular (Kg)</h3>
+        <div class="chart-container"><canvas id="musculoChart"></canvas></div>
+      </div>
+      <div class="card">
+        <h3>BMR (kcal)</h3>
+        <div class="chart-container"><canvas id="bmrChart"></canvas></div>
+      </div>
+      <div class="card">
+        <h3>Edad metabólica</h3>
+        <div class="chart-container"><canvas id="edadMetabolicaChart"></canvas></div>
+      </div>
+      <div class="card">
+        <h3>Grasa visceral</h3>
+        <div class="chart-container"><canvas id="grasaVisceralChart"></canvas></div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const SHEET_URL = 'https://script.google.com/macros/s/AKfycbw4p-6JUt9kx5K5qbFSWffaX9FtEQ0tK_ptRrYTSlZzIr-MxlAZPEIr0MK22fvDboGrUw/exec';
+    let charts = {}, fechasGlobal = [];
+
+    function drawChart(id, data, color) {
+      const ctx = document.getElementById(id).getContext('2d');
+      if (charts[id]) {
+        charts[id].data.labels = fechasGlobal;
+        charts[id].data.datasets[0].data = data;
+        charts[id].update();
+      } else {
+        charts[id] = new Chart(ctx, {
+          type: 'line',
+          data: {
+            labels: fechasGlobal,
+            datasets: [{
+              data,
+              borderColor: color,
+              backgroundColor: color + '33',
+              fill: true,
+              tension: 0.4,
+              pointRadius: 4
+            }]
+          },
+          options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            scales: {
+              x: { grid: { display: false } },
+              y: { beginAtZero: false, grid: { color: '#eee' } }
+            },
+            plugins: { legend: { display: false } }
+          }
+        });
+      }
+    }
+
+    function renderizarGraficos(datos) {
+      datos.sort((a, b) => new Date(a.Fecha) - new Date(b.Fecha));
+      fechasGlobal = datos.map(r =>
+        new Date(r.Fecha).toLocaleDateString('es-ES', { month:'short', day:'numeric' })
+      );
+      const m = f => datos.map(r => parseFloat(r[f]) || 0);
+      drawChart('pesoChart', m('Peso corporal Kg'), '#ff6b35');
+      drawChart('bmiChart', m('BMI (Índice Masa Corporal)'), '#667eea');
+      drawChart('grasaChart', m('% Grasa corporal'), '#f5576c');
+      drawChart('aguaChart', m('% Agua total del cuerpo'), '#4facfe');
+      drawChart('musculoChart', m('Masa muscular Kg'), '#4ade80');
+      drawChart('bmrChart', m('BMR (Tasa Metabólica Basal)'), '#764ba2');
+      drawChart('edadMetabolicaChart', m('Edad metabólica'), '#f093fb');
+      drawChart('grasaVisceralChart', m('Nivel de grasa visceral'), '#ff8e53');
+    }
+
+    async function init() {
+      const allData = await fetch(SHEET_URL).then(r => r.json());
+      const nombres = [...new Set(allData.map(r => r.Nombre))];
+      const sel = document.getElementById('clienteSelect');
+      sel.innerHTML = '<option value="">—Selecciona cliente—</option>';
+      nombres.forEach(n => {
+        const o = document.createElement('option');
+        o.value = n;
+        o.textContent = n;
+        sel.appendChild(o);
+      });
+      sel.addEventListener('change', () => {
+        const url = sel.value
+          ? `${SHEET_URL}?nombre=${encodeURIComponent(sel.value)}`
+          : SHEET_URL;
+        fetch(url).then(r => r.json()).then(renderizarGraficos);
+      });
+      renderizarGraficos(allData);
+    }
+
+    init();
+  </script>
+</body>
+</html>
